# CLOB

./: .gitignore  Cargo.toml
logs/: BUILD_LOG.md  THOUGHT_LOG.md
logs/plans/: phase_-1.md
src/domain/: market.rs  order.rs
